# buglex

./: .gitignore  README.md  pyproject.toml  requirements.txt
datasets/: README.md
docs/: README.md
results/: ablation_preproc_summary.csv  benchmark_stage_summary_768.csv  benchmark_stage_summary_768_lemmatize.csv  benchmark_stage_summary_768_stopwords_all.csv  benchmark_stage_summary_768_stopwords_keep_negation.csv  benchmark_stage_summary_768_stopwords_keep_negation_plus_lemmatize.csv  caffe_all_models_768.csv  caffe_all_models_768_lemmatize.csv  caffe_all_models_768_stopwords_all.csv  caffe_all_models_768_stopwords_keep_negation.csv  caffe_all_models_768_stopwords_keep_negation_plus_lemmatize.csv  caffe_embedding_ablation_512_256_128_64.csv  caffe_embedding_ablation_512_256_128_64_lemmatize.csv  caffe_embedding_ablation_512_256_128_64_stopwords_all.csv  caffe_embedding_ablation_512_256_128_64_stopwords_keep_negation.csv  caffe_embedding_ablation_512_256_128_64_stopwords_keep_negation_plus_lemmatize.csv  embedding_ablation_summary_512_256_128_64.csv  embedding_ablation_summary_512_256_128_64_lemmatize.csv  embedding_ablation_summary_512_256_128_64_stopwords_all.csv  embedding_ablation_summary_512_256_128_64_stopwords_keep_negation.csv  embedding_ablation_summary_512_256_128_64_stopwords_keep_negation_plus_lemmatize.csv  friedman_main_models_768.csv  friedman_main_models_768_lemmatize.csv  friedman_main_models_768_stopwords_all.csv  friedman_main_models_768_stopwords_keep_negation.csv  friedman_main_models_768_stopwords_keep_negation_plus_lemmatize.csv  (+76 more)
(+43 files in other folders)
