[project]
name = "coursework"
version = "0.1.0"
description = "Intelligent Software Engineering coursework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "scipy>=1.16.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "matplotlib>=3.10.8",
    "einops>=0.8.2",
    "nltk>=3.9.4",
    "rich>=13.0.0",
]
